--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,5 @@
-[package]
-name = "udigest"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-digest = { version = "0.10", default-features = false }
-
-[features]
-std = ["alloc"]
-alloc = []
+[workspace]
+resolver = "2"
+members = [
+  "udigest",
+]
