--- a/udigest-derive/Cargo.toml
+++ b/udigest-derive/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [lib]
 proc-macro = true
+path = "src/lib.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
