--- a/udigest/Cargo.toml
+++ b/udigest/Cargo.toml
@@ -2,8 +2,14 @@
 name = "udigest"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+description = "Unambiguously digest structured data"
+repository = "https://github.com/dfns/udigest"
+categories = ["algorithms", "cryptography", "no-std", "no-std::no-alloc"]
+keywords = ["hashing", "unambiguous encoding"]
+readme = "../README.md"
 
-[package.metadata."docs.rs"]
+[package.metadata.docs.rs]
 all-features = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
