--- a/udigest-derive/Cargo.toml
+++ b/udigest-derive/Cargo.toml
@@ -2,6 +2,9 @@
 name = "udigest-derive"
 version = "0.1.0"
 edition = "2021"
+description = "Proc macro for `udigest` crate"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/dfns/udigest"
 
 [lib]
 proc-macro = true
