--- a/udigest/Cargo.toml
+++ b/udigest/Cargo.toml
@@ -17,7 +17,7 @@ all-features = true
 [dependencies]
 digest = { version = "0.10", default-features = false }
 
-udigest-derive = { path = "../udigest-derive", optional = true }
+udigest-derive = { version = "0.1", optional = true }
 
 [dev-dependencies]
 sha2 = "0.10"
