--- a/udigest/Cargo.toml
+++ b/udigest/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT OR Apache-2.0"
 description = "Unambiguously digest structured data"
 repository = "https://github.com/dfns/udigest"
 categories = ["algorithms", "cryptography", "no-std", "no-std::no-alloc"]
-keywords = ["hashing", "unambiguous encoding"]
+keywords = ["hashing", "unambiguous-encoding"]
 readme = "../README.md"
 
 [package.metadata.docs.rs]
