--- a/udigest/Cargo.toml
+++ b/udigest/Cargo.toml
@@ -11,22 +11,30 @@ readme = "../README.md"
 
 [package.metadata.docs.rs]
 all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-digest = { version = "0.10", default-features = false }
+digest = { version = "0.10", default-features = false, optional = true }
 
 udigest-derive = { version = "0.1", optional = true }
 
 [dev-dependencies]
-sha2 = "0.10"
 hex = "0.4"
 
+sha2 = "0.10"
+sha3 = "0.10"
+blake2 = "0.10"
+
 [features]
+default = ["digest", "std"]
+
 std = ["alloc"]
 alloc = []
 derive = ["dep:udigest-derive"]
+
+digest = ["dep:digest"]
 
 [[test]]
 name = "derive"
