Update CI, fix no-alloc compilation
Signed-off-by: Denis Varlakov <denis@dfns.co>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,9 +21,9 @@ jobs:
       with:
         cache-on-failure: "true"
     - name: Check
-      run: cargo check -p udigest --features "${{ matrix.features }}"
+      run: cargo check -p udigest --no-default-features --features "${{ matrix.features }}"
     - name: Run tests
-      run: cargo test -p udigest --lib --tests --features "${{ matrix.features }}"
+      run: cargo test -p udigest --lib --tests --no-default-features --features "${{ matrix.features }}"
   test-all-features:
     runs-on: ubuntu-latest
     steps:
